--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,6 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   </head>
   <body>
+      <img id='rhino' style="width:32px; height: 32px;" src="" alt="">
   </body>
 </html>
